fixed pillar spacing

--- a/style.css
+++ b/style.css
@@ -547,6 +547,13 @@ img {
   text-align: center;
 }
 
+.mu-title2 {
+  display: inline;
+  width: 100%;
+  text-align: center;
+  
+}
+
 .mu-title .mu-subtitle {
   font-size: 50px;
   font-family: "Tangerine", cursive;
@@ -554,6 +561,12 @@ img {
 }
 
 .mu-title h2 {
+  color: black;
+  font-size: 35px;
+  margin-bottom: 5px;
+}
+
+.mu-title2 h2 {
   color: black;
   font-size: 35px;
   margin-bottom: 5px;
@@ -2151,6 +2164,63 @@ h5.events-text {
     top: 25px;
     width: 100%;
     text-align: center;
+}
+
+
+/*pillars homepage */
+.about-col {
+  background: #fff;
+  border-radius: 20px 20px 20px 20px;
+  box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
+  margin-bottom: 20px;
+}
+
+.about-col .img {
+  position: relative;
+}
+
+.about-col .img img {
+  border-radius: 20px 20px 0 0;
+}
+
+.about-col .icon {
+  width: 64px;
+  height: 64px;
+  padding-top: 8px;
+  text-align: center;
+  position: absolute;
+  background-color: #fff;
+  border-radius: 50%;
+  text-align: center;
+  border: 4px solid #fff;
+  left: calc( 50% - 32px);
+  bottom: -30px;
+  transition: 0.3s;
+}
+
+.about-col i {
+  font-size: 36px;
+  line-height: 1;
+  color: #fff;
+  transition: 0.3s;
+}
+
+
+.about-col h2 {
+  color: #000;
+  text-align: center;
+  font-weight: 700;
+  font-size: 35px;
+  padding: 0;
+  margin: 40px 0 12px 0;
+}
+
+.about-col p {
+  font-size: 14px;
+  line-height: 24px;
+  color: #333;
+  margin-bottom: 0;
+  padding: 0 20px 20px 20px;
 }
 
 
